--- a/.github/workflows/mail-on-push.yaml
+++ b/.github/workflows/mail-on-push.yaml
@@ -13,8 +13,7 @@ server_port: 465
 username: ${{secrets.MAIL_USERNAME}}
 password: ${{secrets.MAIL_PASSWORD}} 
 subject: NIGERIAN PRINCE 
-body: Email test from ${{github.repository}}. which is owned by
-${{github.event.pusher.name}}
+body: Email test from ${{github.repository}}. which is owned by ${{github.event.pusher.name}}.
 to: jyri.vaitmaa@tthk.ee
 from: Github Actions
 
